.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:28:51 **** Incremental Build of configuration Debug for project Game-Card ****
make all 
Building file: ../src/GameCard.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/GameCard.d" -MT"src/GameCard.o" -o "src/GameCard.o" "../src/GameCard.c"
../src/GameCard.c:56:2: warning: "/*" within comment [-Wcomment]
  /*gamecard_exit();
  ^
../src/GameCard.c:71:1: warning: "/*" within comment [-Wcomment]
 /*void subscribe(void*arg)
 ^
../src/GameCard.c:252:1: warning: "/*" within comment [-Wcomment]
 /*void send_ack(void* arg) {
 ^
Finished building: ../src/GameCard.c
 
Building file: ../src/bloque_handler.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/bloque_handler.d" -MT"src/bloque_handler.o" -o "src/bloque_handler.o" "../src/bloque_handler.c"
In file included from ../src/gm_metadata.h:14:0,
                 from ../src/bloque_handler.h:15,
                 from ../src/bloque_handler.c:1:
../src/gm_bitmap.h:26:8: warning: extra tokens at end of #endif directive [-Wendif-labels]
 #endif GM_BITMAP_H
        ^
In file included from ../src/bloque_handler.h:15:0,
                 from ../src/bloque_handler.c:1:
../src/gm_metadata.h:54:8: warning: extra tokens at end of #endif directive [-Wendif-labels]
 #endif GM_METADATA_H
        ^
In file included from ../src/bloque_handler.c:1:0:
../src/bloque_handler.h:19:2: error: unknown type name ‘uint32_t’
  uint32_t cantidad;
  ^
../src/bloque_handler.h:20:2: error: unknown type name ‘uint32_t’
  uint32_t posX;
  ^
../src/bloque_handler.h:21:2: error: unknown type name ‘uint32_t’
  uint32_t posY;
  ^
../src/bloque_handler.h:46:8: warning: extra tokens at end of #endif directive [-Wendif-labels]
 #endif BLOQUE_HANDLER_H
        ^
../src/bloque_handler.c: In function ‘blocks_ocupados’:
../src/bloque_handler.c:6:12: warning: implicit declaration of function ‘get_blocks’ [-Wimplicit-function-declaration]
     return get_blocks(tamanio);
            ^
../src/bloque_handler.c: In function ‘escribir_blocks’:
../src/bloque_handler.c:23:28: warning: implicit declaration of function ‘obtenerPathDelNumeroDeBloque’ [-Wimplicit-function-declaration]
         char* pathBloque = obtenerPathDelNumeroDeBloque((int) list_get(bloques, i));
                            ^
../src/bloque_handler.c:23:28: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
../src/bloque_handler.c:37:13: warning: unused variable ‘write’ [-Wunused-variable]
         int write = fwrite(take,1,limiteSuperior,bloque);
             ^
../src/bloque_handler.c: In function ‘leer_pokemons’:
../src/bloque_handler.c:69:47: warning: passing argument 1 of ‘string_itoa’ makes integer from pointer without a cast [-Wint-conversion]
src/subdir.mk:39: recipe for target 'src/bloque_handler.o' failed
         string_append(&blockPath, string_itoa(list_get(blocks, i)));
                                               ^
In file included from ../src/bloque_handler.h:13:0,
                 from ../src/bloque_handler.c:1:
/usr/include/commons/string.h:33:8: note: expected ‘int’ but argument is of type ‘void *’
  char* string_itoa(int number);
        ^
../src/bloque_handler.c:75:4: warning: implicit declaration of function ‘gamecard_logger_error’ [-Wimplicit-function-declaration]
    gamecard_logger_error("No ha sido posible leer el archivo");
    ^
../src/bloque_handler.c:85:17: warning: implicit declaration of function ‘formatStringToBlockLine’ [-Wimplicit-function-declaration]
     blockLine = formatStringToBlockLine(previousLastLine);
                 ^
../src/bloque_handler.c:85:15: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     blockLine = formatStringToBlockLine(previousLastLine);
               ^
../src/bloque_handler.c:90:15: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     blockLine = formatStringToBlockLine(line);
               ^
../src/bloque_handler.c: In function ‘string_blocks_list’:
../src/bloque_handler.c:112:21: warning: passing argument 2 of ‘list_add’ makes pointer from integer without a cast [-Wint-conversion]
   list_add(retList, atoi(blockStrWithoutBraces));
                     ^
In file included from ../src/bloque_handler.h:14:0,
                 from ../src/bloque_handler.c:1:
/usr/include/commons/collections/list.h:51:6: note: expected ‘void *’ but argument is of type ‘int’
  int list_add(t_list *, void *element);
      ^
../src/bloque_handler.c:119:22: warning: passing argument 2 of ‘list_add’ makes pointer from integer without a cast [-Wint-conversion]
    list_add(retList, atoi(blocksWithoutCommaSeparator[i]));
                      ^
In file included from ../src/bloque_handler.h:14:0,
                 from ../src/bloque_handler.c:1:
/usr/include/commons/collections/list.h:51:6: note: expected ‘void *’ but argument is of type ‘int’
  int list_add(t_list *, void *element);
      ^
../src/bloque_handler.c: In function ‘block_lines_string’:
../src/bloque_handler.c:145:27: warning: implicit declaration of function ‘formatToBlockLine’ [-Wimplicit-function-declaration]
   string_append(&retChar, formatToBlockLine(newLineBlock->posX, newLineBlock->posY, newLineBlock->cantidad));
                           ^
../src/bloque_handler.c:145:27: warning: passing argument 2 of ‘string_append’ makes pointer from integer without a cast [-Wint-conversion]
In file included from ../src/bloque_handler.h:13:0,
                 from ../src/bloque_handler.c:1:
/usr/include/commons/string.h:74:8: note: expected ‘char *’ but argument is of type ‘int’
  void  string_append(char ** original, char * string_to_add);
        ^
../src/bloque_handler.c: In function ‘mostrar_lista_pokemons’:
../src/bloque_handler.c:182:2: warning: implicit declaration of function ‘gamecard_logger_info’ [-Wimplicit-function-declaration]
  gamecard_logger_info("Size lista %d:", list_size(pokemonLines));
  ^
make: *** [src/bloque_handler.o] Error 1
